--- a/Notification/appsettings.Development.json
+++ b/Notification/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "NotificationPostgresDB": "",
+    "NotificationRedis": "localhost:6379"
   }
 }
