add redis implementation

--- a/Notification/appsettings.Development.json
+++ b/Notification/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "NotificationPostgresDB": "",
+    "PostgresNotificationDataContext": "",
     "NotificationRedis": "localhost:6379"
   }
 }
