--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,6 +1,21 @@
 version: '3.4'
 
 services:
+  keycloak:
+    image: quay.io/keycloak/keycloak:latest
+    environment:
+        DB_VENDOR: POSTGRES
+        DB_ADDR: postgres
+        DB_DATABASE: keycloak
+        DB_USER: keycloak
+        DB_SCHEMA: public
+        DB_PASSWORD: password
+        KEYCLOAK_USER: admin
+        KEYCLOAK_PASSWORD: Pa55w0rd
+    ports:
+        - 8080:8080
+    depends_on:
+        - postgres
   postgres:
     container_name: pg_container
     image: postgres
