--- a/Notification/appsettings.Development.json
+++ b/Notification/appsettings.Development.json
@@ -7,7 +7,11 @@
     }
   },
   "ConnectionStrings": {
-    "NotificationPostgresDB": "",
-    "NotificationRedis": "localhost:6379"
+    "PostgresNotificationDataContext": "host=postgres;port=5432;database=notification;username=admin;password=admin",
+    "RedisCacheService": "redis:6379,abortConnect=False"
+  },
+  "Redis": {
+    "AbsoluteExpireTime": "1",
+    "SlidingExpireTime": "0:10"
   }
 }
