--- a/Notification/appsettings.Development.json
+++ b/Notification/appsettings.Development.json
@@ -13,5 +13,10 @@
   "Redis": {
     "AbsoluteExpireTime": "1",
     "SlidingExpireTime": "0:10"
+  },
+  "Oidc": {
+    "Authority": "http://localhost:8080/auth/realms/master",
+    "Audience": "Notification",
+    "ClientSecret": "7919614c-720b-4f7e-8504-699be07029bd"
   }
 }
